<resources>
    <string name="app_name">FitRace</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="go_to_signup">Go Sign up</string>
    <string name="go_to_signIn">Go Sign in</string>

    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_step_count">StepCountActivity</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Need location for map tracking</string>
    <string name="title_activity_main_and_running_tabs_screen">MainAndRunningTabsScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_leader_board">LeaderBoardActivity</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="twoRanksReason">One rank represents your step count rank, while the other represents your running rank.
    Your step count rank can be improved by increasing your daily step count and completing challenges. Your runnning rank can only be increased
    by completing running challenges. The runnning challenges can be completed as many times as you want.</string>
    <string name="addFriend">To add a friend, use the navigation drawer to go to the friend page and then tap on the magnifying glass icon.
    Enter the email address of the friend you want to add. If they are found, a popup will show you their account details and you will be given an option to add them. </string>
    <string name="changeAccountInfo">Yes, you can change your account information by using the navigation drawer
        in the top left of the screen to navigate to the profile page and tapping on any of the pencil icons.</string>
    <string name="statsExplanation">The stats page shows your step count information over the past 7 days, including today.
    Each bar represents a day. The stats page also shows the total number of steps recorded since you signed up, and the average
    steps taken per day since you signed up.</string>
    <string name="EmailExplanation">Your email address is only visibile to your friends and is not made public. Your email is only
    used by other users to add you as a friend. On public data lists such as leaderboards, only your name is shown. No other data is
    made public other than your challenge times.</string>
    <string name="DataExplanation">Your data is not being used for any external purposes. This application is simply a side project. I am not making any
    money from this application. For more information on my motivations, check out the "About" page.</string>
    <string name="title_activity_about">About</string>
    <string name="aboutDevs">My name is Zachary Allegretti and I am a Computer Science student at The Ohio State University in Columbus, Ohio. This app was
    initially developed as my class project for CSE 5236: Mobile Application Development during the Spring of 2018. Harshil Amin and I worked together to produce a
    mostly complete version of the app. After the class ended I continued development by myself in order to launch it to the Google Play Store.</string>
    <string name="aboutApp">Since this is just a personal project, it is 100% free and there are no ads. Furthermore, your data is not being used
    for anything malicious. Your fitness data is stored in Google Fit; The database is handled through Google Firebase; your location is used with
    Google Maps. Because this application is the culmination of many hours of hard work, it is very important that it accurately represents my ability
    to build quality mobile apps. If you encounter any strange behaviors or inconsistencies, please email allegrettidev@gmail.com with details
    about what happened.</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name = "backgroundData">You do not need to launch the app to have your data saved, but launching it will
    ensure that the most accurate fitness data is being recorded. After the app is launched for the first time, it will
    update your daily step count, experience, and challenges in the background approximately every 3 hours. This ensures that
    your fitness data is kept reasonably accurate while limiting the amount of background network usage needed.</string>
    <string name = "boardDesc1">You have two ranks. Your walking rank is increased by taking steps and completing challenges. Your running
    rank is increased by completing running challenges. Running challenges can be completed as many times as you want.</string>
    <string name = "boardDesc2">Some friendly competition never hurts. You can add friends by entering the email address
    associated with their account. When you add someone, you can see their ranks and running challenge times.
        Simply tap the magnifying glass to start adding friends. </string>
    <string name = "boardDesc3">During a running challenge, you can view the distance and time remaining, along with
        the path you have taken. When you complete the challenge, your time will be added to the leaderboards. You
    can view the best times on the leaderboard for each challenge. You can complete running challenges as many times
    as you want. Only your best time will get saved, but you will still earn experience if you complete it.</string>

</resources>
