<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context="com.harshil.zach.fitnesstracker.SignUpActivity">

    <!-- Sign up progress -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo_new" />

            <TextView
                android:id="@+id/SignUpHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="0dp"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:layout_margin="10dp"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/password"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_width="fill_parent"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />


            <Button
                android:id="@+id/email_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingTop="10dp"
                android:text="Already have an account?"
                android:textSize="16sp" />

            <Button
                android:id="@+id/goToSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:text="@string/go_to_signIn"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
